--- a/SystemAutomationUpdate/Framework/GetTransactionData.xaml
+++ b/SystemAutomationUpdate/Framework/GetTransactionData.xaml
@@ -6,6 +6,7 @@
     <x:Property Name="out_TransactionURL" Type="OutArgument(x:String)" />
     <x:Property Name="in_ExcelFilePath" Type="InArgument(x:String)" />
     <x:Property Name="out_TransactionType" Type="OutArgument(x:String)" />
+    <x:Property Name="out_TransactionProductName" Type="OutArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
@@ -139,12 +140,12 @@
                     </sap:WorkflowViewStateService.ViewState>
                   </Assign>
                   <FlowStep.Next>
-                    <FlowDecision x:Name="__ReferenceID0" Condition="[out_TransactionItem IsNot Nothing]" DisplayName="exist Transaction" sap:VirtualizedContainerService.HintSize="104,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
+                    <FlowDecision x:Name="__ReferenceID0" Condition="[out_TransactionItem IsNot Nothing]" DisplayName="exist Transaction" sap:VirtualizedContainerService.HintSize="105,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           <av:Point x:Key="ShapeLocation">408,566.5</av:Point>
-                          <av:Size x:Key="ShapeSize">104,87</av:Size>
+                          <av:Size x:Key="ShapeSize">105,87</av:Size>
                           <av:PointCollection x:Key="TrueConnector">408,610 300,610 300,657</av:PointCollection>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
@@ -156,7 +157,7 @@
                               <av:Size x:Key="ShapeSize">200,66</av:Size>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <Sequence DisplayName="Set Parameters" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_1">
+                          <Sequence DisplayName="Set Parameters" sap:VirtualizedContainerService.HintSize="306,352" sap2010:WorkflowViewState.IdRef="Sequence_1">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -168,6 +169,14 @@
                               </Assign.To>
                               <Assign.Value>
                                 <InArgument x:TypeArguments="x:String">[out_TransactionItem("URL").ToString]</InArgument>
+                              </Assign.Value>
+                            </Assign>
+                            <Assign DisplayName="代入" sap:VirtualizedContainerService.HintSize="264,60" sap2010:WorkflowViewState.IdRef="Assign_5">
+                              <Assign.To>
+                                <OutArgument x:TypeArguments="x:String">[out_TransactionProductName]</OutArgument>
+                              </Assign.To>
+                              <Assign.Value>
+                                <InArgument x:TypeArguments="x:String">[out_TransactionItem("Product_Name").ToString]</InArgument>
                               </Assign.Value>
                             </Assign>
                             <Assign DisplayName="代入" sap:VirtualizedContainerService.HintSize="264,60" sap2010:WorkflowViewState.IdRef="Assign_4">
