--- a/SystemAutomationUpdate/Main.xaml
+++ b/SystemAutomationUpdate/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="654,879" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="654,919" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
       <x:String>System.Activities</x:String>
@@ -86,7 +86,7 @@
           <av:PointCollection x:Key="ConnectorLocation">300,163 300,197</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <Sequence DisplayName="Init - 初期化" sap:VirtualizedContainerService.HintSize="518,863" sap2010:WorkflowViewState.IdRef="Sequence_2">
+      <Sequence DisplayName="Init - 初期化" sap:VirtualizedContainerService.HintSize="518,868" sap2010:WorkflowViewState.IdRef="Sequence_2">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -205,7 +205,7 @@
             </If.Else>
           </If>
         </Sequence>
-        <Sequence DisplayName="ブラウザ初期化" sap:VirtualizedContainerService.HintSize="476,453" sap2010:WorkflowViewState.IdRef="Sequence_16">
+        <Sequence DisplayName="ブラウザ初期化" sap:VirtualizedContainerService.HintSize="476,458" sap2010:WorkflowViewState.IdRef="Sequence_16">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -221,7 +221,7 @@
               </ActivityAction>
             </ui:OpenBrowser.Body>
           </ui:OpenBrowser>
-          <ui:Comment DisplayName="コメント" sap:VirtualizedContainerService.HintSize="434,207" sap2010:WorkflowViewState.IdRef="Comment_1" Text="ブラウザ内に以下のサイトが開かれていると、セレクターが混乱してしまうので開かせないようにするか、混乱しないようにする&#xD;&#xA;https://support.hpe.com/hpsc/swd/public/detail?swItemId=MTX_379daccdc547448493fd2c5b17&amp;swEnvOid=4176&#xD;&#xA;https://support.hpe.com/hpsc/swd/public/detail?swItemId=MTX_d44f26458a5c435982ed57b5dc&amp;swEnvOid=4176#tab4" />
+          <ui:Comment DisplayName="コメント" sap:VirtualizedContainerService.HintSize="434,212" sap2010:WorkflowViewState.IdRef="Comment_1" Text="ブラウザ内に以下のサイトが開かれていると、セレクターが混乱してしまうので開かせないようにするか、混乱しないようにする&#xA;https://support.hpe.com/hpsc/swd/public/detail?swItemId=MTX_379daccdc547448493fd2c5b17&amp;swEnvOid=4176&#xA;https://support.hpe.com/hpsc/swd/public/detail?swItemId=MTX_d44f26458a5c435982ed57b5dc&amp;swEnvOid=4176#tab4" />
         </Sequence>
       </Sequence>
       <FlowStep.Next>
